--- a/src/components/Shows/Shows.css
+++ b/src/components/Shows/Shows.css
@@ -1,4 +1,11 @@
+.shows-page-title {
+    margin: 50px auto;
+    text-align: center;
+}
+
 .shows-cards {
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    align-items: flex-start;
 }
