--- a/src/components/Shows/Shows.css
+++ b/src/components/Shows/Shows.css
@@ -7,5 +7,6 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
+    text-align: center;
 }
