--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -8,6 +8,11 @@
     box-shadow: 1px 1px 5px 1px grey;
 }
 
+.left-header {
+    cursor: pointer;
+    font-weight: bold;
+}
+
 .right-header {
     cursor: pointer;
     display: flex;
